maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value random5
    if(random5()==0)
       ^